--- a/src/app/webs/identificarataques/identificarataques.component.html
+++ b/src/app/webs/identificarataques/identificarataques.component.html
@@ -1,1 +1,38 @@
-<p>identificarataques works!</p>
+<div class="Secciones">
+  <h1>Consejos para detectar un ciberataque</h1>
+  <p>
+    Según datos oficiales año tras año los incidentes en seguridad informática van aumentando en más de un 100%.
+  </p>
+  <h2>¿Cómo detectar y/o prevenir un Ciberataque?</h2>
+  <p> Existen diversas maneras de detectar un ciberataque algunas de las principales y mas claras son las siguientes:</p>
+  <ul>
+    <li>
+      <p>
+        <b>Consumo de recursos elevado y aumento de actividad en el disco duro</b>
+        Uno de los indicadores más claros para poder sospechar que algo no va bien, suele ser el rendimiento. Un aumento en la actividad de los discos duros y en el procesador nos puede hacer sospechar de que el equipo tenga un virus.
+      </p>
+    </li>
+    <li>
+      <p>
+        <p>
+          <b>Aumento en las estadísticas de la red</b>
+          Muchos malware utilizan los recursos del equipo como un terminal para enviar mensajes masivos de spam o incluso ser la fuente para atacar a otros ordenadores que están en la misma red.
+          Es obvio que un solo equipo no se haría notar en exceso en la red, pero el convertirse en el primer ordenador infectado con otros ordenadores en la misma red, abre una puerta a poder infectar a los otros, por eso es tan importante analizar la red en general así como el consumo de red por máquina y crear avisos.
+        </p>
+    </li>
+  </ul>
+  <p>
+    Los dos puntos anteriores son claves para detectar posibles ciberataques, y todos ellos son bastante fáciles de monitorizar con las herramientas adecuadas, ya que muchas de estas crean avisos en función de unos parámetros introducidos previamente, como hace nuestro sistema operativo a quedarnos sin espacio en el disco duro.
+    <br> Otros indicativos a tener en cuenta que van más ligados a una buenas prácticas de los usuarios podrían ser los siguientes:
+  </p>
+  <ul>
+    <li> Publicación no autorizada en las webs </li>
+    <li> Recepción masiva de correos electrónicos spam.</li>
+    <li> Envíos a compañeros que tu no has realizado.</li>
+    <li> Lentitud en el ordenador y en internet.</li>
+  </ul>
+  <p>
+    Los puntos anteriores son muy importantes que ya no dependen del responsable de sistemas, sino de las personas que día a día pueden informar de que algo puede fallar.
+    Tener herramientas de prevención es importante pero también lo es el detectar el ciberataque lo antes posible, para evitar así su propagación.
+  </p>
+</div>
