--- a/src/app/webs/principal/principal.component.html
+++ b/src/app/webs/principal/principal.component.html
@@ -1,1 +1,28 @@
-<p>principal works!</p>
+<p>Hoy en día la ciberseguridad es cada vez un tema de mayor importancia en la tecnología. Es por ello que en esta web veremos qué es la ciberseguridad y su importancia.</p>
+<h1>¿Que es la CiberSeguridad?</h1>
+<p>La seguridad informática, también conocida como ciberseguridad, es el área relacionada con la informática la cual se enfoca en la protección de todo lo relacionado con la información contenida en los dispositivos electrónicos o enviada por las redes. </p>
+<p>La seguridad informática también se refiere a la práctica de defender las computadoras y los servidores, los dispositivos móviles, los sistemas electrónicos, las redes y los datos de ataques maliciosos.</p>
+<p>Para poder protegernos existen una serie de estándares, protocolos, métodos, reglas, herramientas y leyes concebidas para disminuir los posibles daños. La ciberseguridad comprende software, hardware y todo lo que pueda ser valorado como un riesgo y su cometido es evitar que la información llegue a usuarios no autorizados.</p>
+<div class="youtube">
+<h4 class="centrado">Como funciona la ciberseguridad</h4>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/rCWvO2sXRKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<br>
+	<p>Herramientas para aumentar la seguridad</p>
+
+  <ul class="justificado">
+			<li><b>El Antivirus:</b> Este tipo de seguridad es imprescindible para cualquier organización, sin importar su actividad o tamaño. Es muy recomendable tener un buen antivirus y tenerlo actualizado para que nos protejan de las ultimas amenazas.</li><br>
+			<li><b>La protección antifraude o pishing:</b> El engaño, se ha convertido en una de las prácticas más usadas en internet, tanto para para infectar miles de dispositivos, como para conseguir datos de los usuarios. Aquí no existen herramientas para combatir estas amenazas, se tiene que contar con el sentido común y desconfiar de lugares sospechosos.</li><br>
+			<li><b>Las copias de seguridad:</b> Es totalmente imprescindible tener una copia de seguridad actual ya sea en la nube o en otros dispositivos, que mantienen a salvo la información de la empresa, la cual es indispensable para poder desempeñar sus funciones. Es muy recomendable comprobar habitualmente que la copia de seguridad se esta haciendo de forma regular.</li>
+		</ul>
+<br>
+<h3>¿Cuáles son las amenazas más comunes?</h3>
+    <p>Ahí va un dato demoledor: las amenazas a las que se enfrenta la ciberseguridad son infinitas.</p>
+    <p>Esto no quiere decir que no se pueda hacer nada para proteger nuestra información, como ya hemos visto, con un poco de sentido común, un buen antivirus y lo más importante una copia de seguridad, para que en el caso que consigan entrar poder recuperar los datos. Cada día surgen nuevas formas de eludir las defensas de la seguridad informática, y conviene estar atento.</p>
+    <p>De momento, vamos a centrarnos en las amenazas más habituales en la Red:</p>
+    <ul class="justificado">
+      <li><b>Ciberespionaje:</b> Este tipo de ataque informático pone el foco, sobre todo, en la información que guardan las empresas. Pero también puede tener como objetivo recabar datos personales sobre un individuo en particular o una organización.</li>
+      <li><b>Cibercrimen:</b> esta amenaza se da cuando los delincuentes con habilidades suficientes acceden a sistemas informáticos protegidos con el fin de obtener un beneficio claro por ejemplo, ganancias financieras o secuestro de información.</li>
+      <li><b>Ciberterrorismo:</b> se trata de un concepto más complejo que los anteriores y también más peligroso. Su objetivo es fomentar un estado de terror y pánico entre una población concreta, amenazando su estabilidad y modo de vida. Por ejemplo, bloquear las finanzas de un país haciendo imposible acceder a los datos de los bancos.</li>
+    </ul>
+    <p>Como ves, hay diferentes niveles de amenazas y para todas ellas debe existir una estrategia de contingencia. En esta web veremos algunas medidas a tener en cuenta para proteger nuestros equipos.</p>
