--- a/src/app/webs/recomendaciones/copiasseguridad/copiasseguridad.component.html
+++ b/src/app/webs/recomendaciones/copiasseguridad/copiasseguridad.component.html
@@ -1,1 +1,21 @@
-<p>copiasseguridad works!</p>
+<main class="Secciones">
+  <h1>Importancia de hacer copias de seguridad</h1>
+  <p>
+    Los ordenadores y dispositivos de almacenaje son seguros, pero no infalibles, tenemos que entender que no son inmunes a los virus, a las averías internas o a esas eliminaciones “accidentales”, a robos, inundaciones etc.
+  </p>
+  <div class="youtube">
+  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/OwUPawOn0yw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+  <p>
+    En las empresas y en el hogar, la información se produce a un ritmo muy acelerado, incluso los datos se han convertido en el núcleo de cualquier empresa. Para evitarnos problemas ya sabemos que debemos ser precavidos en el funcionamiento de nuestra red y sistemas (antivirus, firewall, actualizar el sistema operativo, no abrir documentos de correos electrónicos desconocidos etc), y algo muy importante que a veces se nos olvida es realizar copias de seguridad.
+    <br>Las copias de seguridad son el respaldo que hará que la información que consideras importante esté a salvo.
+    <br>Para ello el primer paso es identificar la información que queremos proteger. No toda la información es igual, hay que analizar la que es crítica y vital para la empresa o el hogar, de esta manera no perderemos tiempo ni datos en guardar información poco relevante.
+    Una vez que sabemos qué información debemos proteger, tenemos que establecer la manera en la que haremos las copias y la periodicidad con la que las realizaremos.
+    Para eso es imprescindible saber cada cuánto se actualiza nuestra información más relevante. En cuanto al soporte se pueden usar discos externos, USB o el almacenamiento en la nube.
+    Si optas por tenerlos en dispositivos externos nuestra recomendación es que almacenes esta información cifrada en una ubicación diferente. Además, ten en cuenta que los discos externos, CD, USB también se estropean, por lo que la mejor opción es optar por el almacenamiento en la nube.
+    <br>A día de hoy existen opciones que se adaptan a todas las necesidades.
+    <br>Una vez que tenemos nuestras copias se seguridad realizándose toca comprobar que ese proceso se está haciendo de la manera correcta.
+    <br>Ahora que sabes por qué es tan importante realizar backup te toca protegerte y proteger la información de tu empresa. Os animamos a hacer copias de seguridad, no sólo si eres un empresario, también a nivel personal, de los archivos de tu ordenador, las fotografías o de tu Smartphone.
+    <br>Vivimos en la era digital, los dispositivos tecnológicos nos acompañan durante todo el día. ¿Por qué no invertir un tiempo a hacer un chequeo de la información que queremos guardar?
+  </p>
+</main>
