--- a/src/app/webs/recomendaciones/recomendaciones.component.html
+++ b/src/app/webs/recomendaciones/recomendaciones.component.html
@@ -1,1 +1,29 @@
-<p>recomendaciones works!</p>
+<p>
+  Todos tenemos información confidencial que proteger, tanto de forma particular como en nuestra labor profesional. Cada vez es más habitual leer noticias sobre empresas a las que les han robado información propia y de sus clientes. En muchos casos lo que ha propiciado el robo es producido por un fallo de seguridad informática básica de alguno de sus empleados.
+  <br>Todos tenemos una responsabilidad en el uso y almacenamiento de la información confidencial por medios electrónicos.
+<br>
+<br>Algunas pautas que podemos seguir para mantener nuestro ordenador seguro son:
+</p>
+<h4>Mantener el ordenador actualizado</h4>
+<p>Esto es algo que los expertos en seguridad no se cansan de repetir y muchos consideran que lo más importante para la seguridad de un ordenador es mantener el sistema operativo (Windows, OS X, Linux, etc.) del ordenador y los programas que se utilicen actualizados con los últimos parches de seguridad. Esto se debe a que en cuanto se conoce un problema de seguridad en un sistema operativo o en un programa los ciberdelincuentes lo analizan y buscan rápidamente la manera de explotarlo para conseguir sus fines. Si instalamos las actualizaciones antes de que un posible programa malicioso aproveche un fallo de seguridad e infecte nuestro ordenador estaremos mejor protegidos.
+</p>
+<h4>Utilizar un antivirus en el ordenador</h4>
+<p>Cada día obtenemos mayor información externa, descargamos ficheros y navegamos mucho por internet. Por tanto, es esencial que el ordenador tengo un antivirus instalado que haga de guardián ante tantas posibles amenazas. Existe el falso mito de que los Mac no necesitan antivirus, pero es simplemente un mito. Es cierto que al estar su uso menos extendido que el de los ordenadores con Windows los ciberdelincuentes les prestan menos atención a los Mac, pero también necesitan antivirus.
+</p>
+  <h4>Desconfiar de soportes de información externos</h4>
+<p> Es habitual recibir información en memorias USB, CD, DVD o discos duros externos. Si es posible se debe evitar. Estos soportes hay que tratarlos con precaución y por tanto hacer que sean analizados por un antivirus antes de ser utilizados. En el caso de las memorias USB o las unidades lectoras de DVD es importante configurarlas para que no se ejecuten o utilicen de forma automática, de tal forma que se puedan analizar y que sea el usuario quien decida qué hacer con ese soporte de información. Existe software malicioso que si ha infectado una memoria USB y se inserta en un ordenador que ejecuta automáticamente el contenido de la memoria USB el ordenador se estará infectando. Los sistemas antivirus suelen protegen contra esta amenaza. Tan peligroso es que nos den una memoria USB desconocida como que prestemos una nuestra, se utilice en otro ordenador y que posteriormente la insertemos en nuestro ordenador. Si es posible evita el uso de memorias USB para transferir información de terceros.
+</p>
+<h4>Bloquear un ordenador desatendido</h4>
+<p>  Cuando nos alejemos de nuestro ordenador por un momento es importante bloquearlo. Es una operación que cuesta un par de segundos y evita que alguien pueda utilizar el ordenador mientras estamos ausentes. Si dejamos el ordenador operativo en nuestra ausencia alguien podría robar información mediante una memoria USB, infectar nuestro ordenador, enviar un mensaje de correo electrónico (y luego borrarlo para retrasar su detección) del que nosotros seremos responsables o borrar/modificar información importante.
+</p>
+<h4>Utilizar conexiones a internet de confianza</h4>
+<p>Cuando se está con un portátil o tableta fuera de nuestra oficina a veces se utilizan redes WiFi públicas, lo cual supone un alto riesgo para la seguridad de nuestra información y la de la empresa. Si aun así consideramos absolutamente inevitable conectarnos a una red WiFi pública, al menos deberíamos utilizar conexiones cifradas. Lo ideal sería que utilizáramos el portátil o tableta con la conexión a internet de nuestro propio teléfono móvil (mejor con un cable que por la WiFi del teléfono). Todavía mejor sería utilizar un servicio de VPN (Red Privada Virtual) que garantizase la confidencialidad de las comunicaciones cifrando toda conexión a internet.
+</p>
+<h4>Contraseñas</h4>
+<p> Deseo terminar esta serie de medidas hablando de algunos hábitos en el uso de contraseñas que si los practicas conseguirás el más ferviente agradecimiento por parte de los cibercriminales:
+  <br>Nunca utilices contraseñas comunes, como por ejemplo ’123456′, ‘password’ o ‘admin’, a no ser que quieras que los ciberdelincuentes puedan entrar.
+  <br>No utilices información personal en la contraseña, como por ejemplo la fecha de nacimiento, número de teléfono, nombre de una mascota, etc. Si lo haces será muy fácil que los ciberdelincuentes puedan entrar.
+  <br>Nunca reutilizas una misma contraseña para diferentes webs. Puesto que si te pillan la contraseña tendrán acceso a todas esas webs
+  <br>Utiliza contraseñas de mas de 8 caracteres con mayúsculas, minúsculas, símbolos y números siempre que puedas.
+  <br>Por último, si alguna vez te encuentras un precioso regalo con un lazo rojo en tu escritorio y eres de los que escriben las contraseñas en un post-it, puedes estar casi seguro de que ambas cosas están relacionadas.
+</p>
