--- a/src/app/webs/recomendaciones/seguridadonline/seguridadonline.component.html
+++ b/src/app/webs/recomendaciones/seguridadonline/seguridadonline.component.html
@@ -1,1 +1,29 @@
-<p>seguridadonline works!</p>
+<div class="Secciones">
+  <h1>La importancia de una contraseña segura</h1>
+  <p>
+    <br> Las contraseñas son uno de los pilares de la ciberseguridad ya que son la forma que disponemos para que el dispositivo o servicio con el que interactuamos sepa quiénes somos.
+    <br> Según los estudios solo uno de cada tres españoles usa contraseñas distintas para cada cuenta y uno de cada diez tiene la misma contraseña en todas sus cuentas.
+    <br> En este sentido, casi una de cada cuatro personas en España (24,8 %), han sido víctimas de intentos de robo de alguna de sus cuentas bancarias. Sin embargo, siguen siendo pocas las que cuentan con una buena seguridad de contraseñas. Aún hoy en día seguimos viendo que la mayoría de los usuarios no le otorgan la importancia necesaria, cometiendo graves errores como emplear contraseñas débiles al estilo de “123456”, “admin” o la fecha de nacimiento, siendo estas las primeras que los ciberdelincuentes prueben para acceder a nuestras cuentas.
+  </p>
+  <div class="youtube">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WXVsbFLUfIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <p>Desde esta web le queremos dar algunos consejos para aumentar la seguridad de nuestras cuentas.</p>
+    <ul class="justificado">
+      <li>Utilizar contraseñas robustas. Son las formadas por al menos 8 caracteres que contengan mayúsculas, minúsculas, números y caracteres especiales. Nunca contendrán palabras del diccionario, fechas de acontecimientos importantes o nombres de seres queridos o mascotas.</li>
+      <li>Prohibido reutilizarlas. No podemos emplear la misma contraseña en dos servicios distintos, ya que si una se ve comprometida también estaría la otra.</li>
+      <li>Ni compartir contraseñas ni escribirlas. Las contraseñas son personales. Si las compartimos o las escribimos, por ejemplo, en un postit, dejan de serlo y por lo tanto pueden caer en malas manos.</li>
+      <li>Actualiza tus contraseñas. Cada cierto tiempo debes cambiar tus contraseñas.</li>
+      <li>Asegúrate que no estén vinculadas a direcciones de correo electrónico que no utilizas.</li>
+      <li>Añade un nivel de seguridad más. Emplea siempre que sea posible la verificación en dos pasos.</li>
+      <li>Ten cuidado con las preguntas de seguridad. Si utilizas este mecanismo para la recuperación de contraseñas, asegúrate que solo tú conoces las respuestas.</li>
+    </ul>
+</div>
+<div class="Secciones">
+    <p> Por último, tendremos que extremar nuestra atención contra ataques de phishing ya que es una de las prácticas más habituales con las que los ciberdelincuentes consiguen nuestras credenciales. Para ello os recordamos las pautas a seguir:</p>
+    <ul>
+      <li>No abras correos de usuarios desconocidos o que no hayas solicitado, elimínalos directamente.</li>
+      <li>No contestes en ningún caso a estos correos.</li>
+      <li>Precaución al seguir enlaces y descargar ficheros de correos, aunque sean de contactos conocidos.</li>
+    </ul>
+</div>
