--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,142 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background-color: #7A7A79;
+}
+#header{
+  height: 70px;
+  padding-top: 2%;
+}
+.Secciones0{
+  float: left;
+  width: 79%;
+  background-color: aqua;
+}
+.SubSeccion01{
+  float: left;
+  width: 60%;
+}
+.SubSeccion02{
+  float: right;
+  width: 39%;
+}
+.Secciones{
+  float: left;
+  width: 100%;
+}
+.Secciones video{
+  width: 450px;
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.youtube{
+  width: 500px;
+  height: 300px;
+  float: right;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.SubSeccion1{
+  float: left;
+  width: 29%;
+}
+.SubSeccion2{
+  float: right;
+  width: 69%;
+}
+.logeo{
+  float: right;
+  width: 20%;
+  clear: right;
+  background-color: red;
+}
+
+h1 {
+  /*Pone la letra del h1 en 35 en negrita y en mayusculas*/
+  font: 35px Arial;
+  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+}
+h2 {
+  /*Pone la letra del h2 en 25 en negrita y en mayusculas*/
+  font: 25px Arial;
+  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 2%;
+  color: white;
+}
+h3 {
+  /*Pone la letra del h2 en 25 en negrita y en mayusculas*/
+  font: 20px Arial;
+  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+}
+h4 {
+  /*Pone la letra del h2 en 25 en negrita y en mayusculas*/
+  font: 15px Arial;
+  text-transform: uppercase; text-shadow: 1px 2px 2px black;
+  font-weight: bold;
+  color: white;
+}
+.negrita {
+  font-weight: bold;
+}
+/*Pone la letra en negrita */
+
+.preparacion {
+  width: 50%;
+}
+th {
+  font-weight: bold;
+}
+.primer {
+  /*alinea el contenido al centro*/
+  text-align: center;
+}
+.degradado {
+  /* Pone el fondo en degradado y la letra en blanco */
+  color: white;
+  background: rgb(181, 189, 200);
+  /* Old browsers */
+  background: -moz-linear-gradient(top, rgba(181, 189, 200, 1) 0%, rgba(130, 140, 149, 1) 36%, rgba(40, 52, 59, 1) 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(181, 189, 200, 1) 0%, rgba(130, 140, 149, 1) 36%, rgba(40, 52, 59, 1) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(181, 189, 200, 1) 0%, rgba(130, 140, 149, 1) 36%, rgba(40, 52, 59, 1) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#28343b', GradientType=0);
+  /* IE6-9 */
+}
+.centrado {text-align: center;}
+.justificado {text-align: justify;}
+b {font-weight: bold;}
+p {
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 1.6;
+}
+.centrado2{ vertical-align: center; }
+etiquetas {
+display: table;
+font: 16px Arial;
+width: 100%;
+}
+etiqueta {display: table-row;}
+atributo, linea, archivo {
+display: table-cell;
+padding: 10px;
+border: 1px solid white;
+}
+#Footer{
+  clear: both;
+  height: 70px;
+  padding-top: 2%;
+}
